--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/home/pastilhex/Desktop/Godot 4/Godot_v4.0.3-stable_linux.x86_64"
+executable_path="/home/ivo/Desktop/Godot 4/Godot_v4.0.3-stable_linux.x86_64"
 use_advanced_connections=false
 tile_source_sort=0
 
